# LIFE_IS_GAME

./: CMakeLists.txt  Game.cpp  Game.h  console_life.cpp  example_test.cpp  life.cpp  life.h  main.cpp
